<resources>
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="title">Welcome</string>
    <string name="description">Instructions: pick rock, paper or scissors to play.</string>
    <string name="statistics_title">Your all time statistics:</string>
    <string name="statistics">Win: %$1 Draw: %$2 Lose: %$3</string>
    <string name="computer">Computer</string>
    <string name="vs">V.S.</string>
    <string name="who_won">Computer wins!</string>
    <string name="player">Player</string>
    <string name="timestamp">timestamp</string>
    <string name="delete_game_history">Delete game history</string>
    <string name="history">See history</string>
</resources>
